--- a/css/contact.css
+++ b/css/contact.css
@@ -58,6 +58,12 @@
         -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
         transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     } 
+    #disclaimer{
+        display: block;
+        font-size: 12px;
+        color: #555;
+        margin-bottom: 0px;
+    }
     #btn-container {
         margin-left: 0%;
         padding-left: 0px;
@@ -65,6 +71,10 @@
 }
 
 @media (min-width: 991px){
+    #disclaimer{
+        width: 70%;
+        margin-left: 25%;
+    }
     form{
         padding-bottom: 0px;
     }
