minor style updates

--- a/css/our-process.css
+++ b/css/our-process.css
@@ -136,6 +136,7 @@
 	}
 	.fc-text{
 		padding:20px;
+		padding-top:0px;
 		font-size: 0.75em;
 		text-align: left;
 	}	
@@ -177,13 +178,13 @@
 		font-size: 0.75em;
 	}
 	#fc1{
-		height: 220px;
+		height: 210px;
 	}
 	#fc2{
 		height: 230px;
 	}
 	#fc3{
-		height: 220px;
+		height: 210px;
 	}
 }
 @media(min-width: 992px){
