--- a/css/main.css
+++ b/css/main.css
@@ -626,7 +626,7 @@ body.custom-background { background-color: #f3f1ed; }
   .content-title{
     font-size: 1.1em;
   }
-  #market-analysis{
+  #market-analysis, #media-plans{
     padding-bottom:70px;
   }
   #technology-scouting{
@@ -651,7 +651,7 @@ body.custom-background { background-color: #f3f1ed; }
   .content-title{
     font-size: 1.1em;
   }
-  #market-analysis{
+  #market-analysis, #media-plans{
     padding-bottom:55px;
   }
   .list__icon_social{
@@ -688,7 +688,7 @@ body.custom-background { background-color: #f3f1ed; }
   .content-title{
     font-size: 1.15em;
   }
-  #market-analysis{
+  #market-analysis, #media-plans{
     padding-bottom:40px;
   }
   .list__icon_social{
@@ -719,7 +719,7 @@ body.custom-background { background-color: #f3f1ed; }
   .content-title{
     font-size: 1.15em;
   }
-  #market-analysis{
+  #market-analysis, #media-plans{
     padding-bottom:35px;
   }
   .list__icon_social{
@@ -732,7 +732,7 @@ body.custom-background { background-color: #f3f1ed; }
   .socialicons{
     display: inherit;
   }
-  #market-analysis{
+  #market-analysis, #media-plans{
     padding-bottom:20px;
   }
 }
@@ -756,7 +756,7 @@ body.custom-background { background-color: #f3f1ed; }
   .content-title{
     font-size: 1.2em;
   }
-  #market-analysis{
+  #market-analysis, #media-plans{
     padding-bottom:0px;
   }
 }
