--- a/css/shop.css
+++ b/css/shop.css
@@ -47,6 +47,10 @@ a, a:hover {
   }
 }
 
+.shopify-buy-frame--toggle{
+  display: block !important;
+}
+
 
 /* SHOP PAGE */
 #launcher, #webWidget, .zEWidget-launcher{
